--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-8">
-                    <div class="row">
+                    <div class="row h-100 flex-column">
                         <div class="col-12 header py-2 d-flex justify-content-between ">
                             <div class="d-flex align-items-center">
                                 <img src="img/avatar_1.jpg" alt="Sofia" class="me-2">
@@ -76,11 +76,37 @@
                                 <i class="fa-solid fa-ellipsis-vertical me-3 fs-4"></i>
                             </div>
                         </div>
-                        <div class="col-12 flex-grow-1 overflow-y-auto h0 py-2 overflow-y-scroll ">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia beatae doloribus sit sapiente architecto asperiores possimus est, commodi officia provident soluta fugit quae dolorem ullam sed in dolore eos quo iure. Veniam dolor, repellendus error rerum quisquam est ducimus accusamus laudantium ipsam minus voluptatum nemo aspernatur inventore sunt in voluptatem sed porro similique eaque, dicta facere eos veritatis dignissimos. A, impedit? Temporibus ab minima nam laboriosam nostrum quia explicabo voluptate, inventore dolore ad, officia fugiat vel voluptatem eveniet, nobis cumque nihil suscipit distinctio deleniti amet maiores magnam. Doloremque quam voluptas ipsa blanditiis fuga! Magni, error facilis natus fuga facere, minima ipsum iure dolore assumenda laboriosam, ea rem molestiae eaque dolores porro explicabo aliquid cumque laborum tempora similique quasi? Accusantium, vel? Sed rerum vitae nulla voluptate cum itaque dicta sequi quam quo natus aliquam explicabo nisi alias facilis culpa atque harum, ipsum ducimus blanditiis modi iste provident amet esse. Asperiores et quam quae non id quas vel ad sit, veritatis rem eaque. Ipsa ratione cumque, et in reprehenderit iure libero assumenda ex aliquam vitae molestiae repellat temporibus id possimus totam nobis exercitationem ipsum? Fuga aperiam tempore quae magni ipsa! Similique quod placeat dolorum ab maxime eius doloribus quaerat commodi, ullam error, laboriosam illum! Magni inventore hic culpa aspernatur velit ipsa, laboriosam molestiae deleniti veritatis rem incidunt, eaque quibusdam! At incidunt tenetur a aliquid quas saepe earum, voluptatum eos error. Voluptatem, laboriosam minus vel repellendus corporis, eligendi, incidunt non quis ea error suscipit adipisci quos corrupti illo provident voluptate nobis impedit placeat beatae! Deserunt dignissimos labore earum alias nam, debitis voluptatibus non cupiditate quaerat ipsa hic vitae ullam, modi maiores ipsum magnam fugiat distinctio? Recusandae, totam cum fuga magni reprehenderit aliquam et nostrum explicabo quasi numquam, facere architecto soluta possimus dolorum aut, rerum error ipsum pariatur? Consequatur fugit nesciunt, cumque atque iste aliquam commodi dolorem obcaecati voluptatum praesentium suscipit ex adipisci corporis ducimus possimus rem rerum laborum officia vero consectetur quos quod porro molestias cum! Deleniti provident blanditiis tempora. Officia error consectetur exercitationem eaque deserunt. Nostrum soluta totam nihil ea praesentium odio ratione dolores ullam, natus consequuntur veritatis nisi eligendi beatae? Maxime quo eaque provident tempora error alias officia ipsam quasi amet repellendus officiis, magnam sint laudantium. Ratione sed, voluptate dicta aliquam qui rerum suscipit, eveniet alias modi deleniti illum unde cupiditate error aliquid doloribus architecto et asperiores. Possimus voluptatibus autem asperiores obcaecati ipsam harum, officia consequuntur non qui adipisci voluptate itaque! Blanditiis, maiores repellendus! Neque optio doloribus fugiat assumenda temporibus nam incidunt quas? Consequuntur, ipsam quo. Commodi aliquam in debitis voluptatibus ea quas assumenda facilis nihil odio, neque vero, dolor reiciendis sapiente suscipit inventore ratione odit sit? Explicabo reprehenderit voluptas perferendis soluta dolorum enim facilis? Necessitatibus aut, assumenda iure ullam est quisquam numquam, neque earum ratione odit repudiandae, esse dicta enim quod commodi. Fuga aperiam obcaecati, ipsam ducimus ullam fugit. Architecto tempora blanditiis ducimus porro. Sint repellat vero nostrum. Nam natus fugiat hic distinctio eius aspernatur maiores harum autem! Nulla accusantium perferendis nostrum fugit debitis consequuntur corrupti ipsam asperiores, animi voluptate.
+                        <div class="col-12 flex-grow-1 overflow-y-auto h-50 overflow-y-scroll body-message p-5">
+                            <div class="sent">
+                                <div class="sent-color p-3 lh-1">
+                                    Hai portato a spasso il cane?
+                                    <div class="last-message text-end lh-1">
+                                        12.00
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="sent">
+                                <div class="sent-color p-3 lh-1">
+                                    Ricordati di stendere i panni
+                                    <div class="last-message text-end lh-1">
+                                        12.00
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="received">
+                                <div class="received-color p-3 lh-1">
+                                    Tutto fatto!
+                                    <div class="last-message text-end lh-1">
+                                        12.00
+                                    </div>
+                                </div>
+                            </div>
+                            
                         </div>
-                        <div class="col-12">
-                            input
+                        <div class="col-12 d-flex color-input-message justify-content-around align-items-center px-3 py-2">
+                            <i class="fa-regular fa-face-smile fs-4 opacity "></i>
+                            <input type="text" placeholder="Scrivi un messaggio!" class="message-input input-border p-3 h-100">
+                            <i class="fa-solid fa-microphone fs-4 opacity"></i>
                         </div>
                     </div>
                     
