--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                         </div>
                         <div class="col-12 header d-flex p-2">
                             <button class="btn btn-light"><i class="fa-solid fa-magnifying-glass"></i></button>
-                            <input type="text" class="w-100 input-border" placeholder="Cerca o inizia nuova chat">
+                            <input type="text" v-model="searchTerm" class="w-100 input-border" placeholder="Cerca o inizia nuova chat">
                         </div>
                         <div class="col-12 flex-grow-1 overflow-y-auto h0 overflow-y-scroll">
-                            <div class="row border-bottom py-2" v-for="contact in contacts" @click="activeContact = contact.name" :class="{'row-grey' : activeContact === contact.name}">
+                            <div class="row border-bottom py-2" v-for="contact in contacts" v-show="searchContact(contact)" @click="activeContact = contact.name" :class="{'row-grey' : activeContact === contact.name}">
                                 <div class="col-12 d-flex justify-content-between" @click="activeContact = contact.name">
                                     <div class="d-flex">
                                         <img :src="contact.avatar" :alt="contact.name" class="me-2">
